--- a/homework_5/style.css
+++ b/homework_5/style.css
@@ -1,3 +1,7 @@
+body, html{
+    height: 100%
+}
+
 #testcase{
  font-family: 'Pacifico', cursive;
 }
@@ -9,8 +13,14 @@
 }
 
 #shoppingcart{
+    margin-left: auto;
+    margin-right: 0;
 }
 
+#carttext{
+    font-family: 'Open Sans', sans-serif; 
+    color: black;
+}
 .navitems{
     font-family: 'Pacifico', cursive;
     font-size: 30px;
@@ -20,12 +30,50 @@
 
 }
 
-p{
+.headerlogo{
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
+    width: 35%;
+}
+
+.bannerimage{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Banner\ Image\ Cover.png");
+    height:100%;
+    background-position: center; 
+    background-repeat: no-repeat;
+    background-size: cover; 
+    position: relative;
+}
+.bannertext{
+    text-align: center; 
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    font-family: 'Pacifico', cursive;
+    color:white; 
+}
+
+.browsebutton{
+    margin-top: 12%;
+    padding: 5px 12px;
     font-family: 'Open Sans', sans-serif;
     font-style: bold;
+    color: black;
+    background-color: #E7FAFE;
+    border: .25px solid black; 
+    outline: 4px solid white;
+
 }
+
+.browsebutton:hover{
+    background-color:white;
+}
+
 .pagefooter{
     border-top: 1px solid black;
     background: #E7FAFE; 
-    padding: 2%;
+    padding: 14px 28px; 
+    cursor: pointer; 
 }
