--- a/homework_5/style.css
+++ b/homework_5/style.css
@@ -171,3 +171,23 @@ ul.breadcrumbs li a:hover{
 #homebreadcrumb{
     padding-right: -2%;
 }
+
+/* Product Browsing Page */
+#productContainer {
+    position: relative;
+    width: 500px;
+}
+
+.productBox {
+    /*display: inline-block;
+    margin-top: 100px;
+    margin-left: 20%;
+    width: 15%;*/
+    position: absolute;
+    background-color: white; 
+    border: 2px solid #7D8789; 
+    box-shadow: 0px 0px 0px 12px#7D8789;
+    outline: 10px solid #E7FAFE;
+    text-align: center;
+}
+
