--- a/homework_5/style.css
+++ b/homework_5/style.css
@@ -173,16 +173,31 @@ ul.breadcrumbs li a:hover{
 }
 
 /* Product Browsing Page */
-#productContainer {
-    position: relative;
-    width: 500px;
+
+.FlavorsHeader {
+    margin-left: 100px;
+    margin-top: 40px;
+    margin-bottom: 50px;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color:black;
+    -webkit-text-stroke-fill-color: white;
+    color: white;
+    font-family: 'Pacifico', cursive;
+    letter-spacing: 4px;
+    font-size: 45px;
 }
 
-.productBox {
-    /*display: inline-block;
-    margin-top: 100px;
-    margin-left: 20%;
-    width: 15%;*/
+#ProductPhoto{
+    width: 297px; 
+    height: 297px;
+}
+
+#ProductBox1{
+    position: absolute; 
+    margin-top: -1px;
+    margin-left: 100px;
+    width: 300px;
+    height: 300px;
     position: absolute;
     background-color: white; 
     border: 2px solid #7D8789; 
@@ -191,3 +206,122 @@ ul.breadcrumbs li a:hover{
     text-align: center;
 }
 
+#PumpkinSpiceTextContainer {
+    position: absolute; 
+    margin-left: 155px;
+    margin-top: 340px;
+    font-size: 16px;
+}
+
+#ProductBox2{
+    position: absolute; 
+    margin-left: 480px;
+    margin-top: -3px;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    background-color: white; 
+    border: 2px solid #7D8789; 
+    box-shadow: 0px 0px 0px 12px#7D8789;
+    outline: 10px solid #E7FAFE;
+    text-align: center;
+}
+
+#OriginalContainer {
+    position: absolute; 
+    margin-left: 590px;
+    margin-top: 340px;
+    font-size: 16px;
+}
+
+#ProductBox3 {
+    position: absolute;
+    margin-left: 860px;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    background-color: white; 
+    border: 2px solid #7D8789; 
+    box-shadow: 0px 0px 0px 12px#7D8789;
+    outline: 10px solid #E7FAFE;
+    text-align: center;
+}
+
+#GFProductPhoto {
+    width: 297px; 
+    height: 325px;
+}
+
+#GlutenFreeContainer {
+    position: absolute; 
+    margin-left: 943px;
+    margin-top: 340px;
+    font-size: 16px;
+}
+
+
+#ProductBox4 {
+    position: absolute; 
+    margin-top: 400px;
+    margin-left: 100px;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    background-color: white; 
+    border: 2px solid #7D8789; 
+    box-shadow: 0px 0px 0px 12px#7D8789;
+    outline: 10px solid #E7FAFE;
+    text-align: center;
+}
+
+#CarmelPecanContainer{
+    position: absolute; 
+    margin-left: 190px;
+    margin-top: 728px;
+    margin-bottom: 200px;
+    font-size: 16px;
+}
+
+#ProductBox5{
+    position: absolute; 
+    margin-left: 480px;
+    margin-top: 400px;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    background-color: white; 
+    border: 2px solid #7D8789; 
+    box-shadow: 0px 0px 0px 12px#7D8789;
+    outline: 10px solid #E7FAFE;
+    text-align: center;
+}
+
+#WalnutContainer{
+    position: absolute; 
+    margin-left: 600px;
+    margin-top: 728px;
+    margin-bottom: 200px;
+    font-size: 16px;
+}
+
+#ProductBox6 {
+    position: absolute;
+    margin-left: 860px;
+    margin-top: 400px;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    background-color: white; 
+    border: 2px solid #7D8789; 
+    box-shadow: 0px 0px 0px 12px#7D8789;
+    outline: 10px solid #E7FAFE;
+    text-align: center; 
+}
+
+#BlackberryContainer {
+    position: absolute; 
+    margin-left: 960px;
+    margin-top: 728px;
+    margin-bottom: 200px;
+    font-size: 16px;
+}
