--- a/homework_5/style.css
+++ b/homework_5/style.css
@@ -2,6 +2,19 @@ body, html {
     height: 100%
 }
 
+#Overlay {
+    position: fixed; 
+    display: block;
+    width: 100%; 
+    height: 100%;
+    top: 0; 
+    left: 0; 
+    right: 0; 
+    bottom: 0;
+    background-color: rgba (0,0,0,0.5);
+    z-index: 2; 
+}
+
 .pageheader {
     border-bottom: 1px solid black;
     background: #E7FAFE; 
@@ -330,3 +343,6 @@ ul.breadcrumbs li a:hover {
     background: #E7FAFE; 
     padding: 40px 100px; 
 }
+
+/*Product Detail Page */
+
