--- a/homework_5/style.css
+++ b/homework_5/style.css
@@ -2,18 +2,19 @@ body, html {
     height: 100%
 }
 
-#Overlay {
-    position: fixed; 
-    display: block;
-    width: 100%; 
-    height: 100%;
-    top: 0; 
-    left: 0; 
-    right: 0; 
+#overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
     bottom: 0;
-    background-color: rgba (0,0,0,0.5);
-    z-index: 2; 
-}
+    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+  }
 
 .pageheader {
     border-bottom: 1px solid black;
@@ -345,4 +346,16 @@ ul.breadcrumbs li a:hover {
 }
 
 /*Product Detail Page */
-
+#overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+  }
