--- a/homework_5/product-detail.css
+++ b/homework_5/product-detail.css
@@ -11,6 +11,73 @@
 
 }
 
+#ProductDetailBox {
+    margin-top: 200px;
+    margin-left: 500px;
+    width: 50%;
+    height: 60%;
+    background-color: white; 
+    border: 2px solid #7D8789; 
+    box-shadow: 0px 0px 0px 12px#7D8789;
+    outline: 10px solid #E7FAFE;
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    gap: 5px;
+}
+
+#OptionBoxSide {
+    order: 1;
+}
+
+#GlazeBox {
+    padding: 2px;
+    margin-top: 30px;
+}
+
+#OptionsBox {
+    border: 1px solid black;
+    margin-bottom: 25px;
+    padding-left: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+
+.GeneralButton {
+    margin-top: 20px;
+    padding: 5px 12px;
+    font-family: 'Open Sans', sans-serif;
+    font-style: bold;
+    color: black;
+    background-color: #E7FAFE;
+    border: 1px solid black; 
+    box-shadow: 0px 0px 0px 4px black;
+    outline: 3px solid white;
+}
+
+#DescriptionSide{
+    margin-top: 20px; 
+    margin-left: 40px;
+    width: 50%;
+
+}
+
+#PumpkinPic {
+    width: 300px;
+    margin-bottom: 20px;
+}
+
+#DescriptionText{
+    font-size: 16; 
+    margin-bottom: 25px;
+}
+
+.NutritionFacts {
+    font-size: 14px;
+    padding: none;
+}
+
 /* Product Browsing Page Background */
 .pageheader {
     border-bottom: 1px solid black;
