--- a/homework_5/product-detail.css
+++ b/homework_5/product-detail.css
@@ -15,7 +15,7 @@
     margin-top: 200px;
     margin-left: 500px;
     width: 50%;
-    height: 60%;
+    height: 65%;
     background-color: white; 
     border: 2px solid #7D8789; 
     box-shadow: 0px 0px 0px 12px#7D8789;
@@ -24,6 +24,7 @@
     flex-direction: row;
     align-items: start;
     gap: 5px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 #OptionBoxSide {
