--- a/homework_5/style.css
+++ b/homework_5/style.css
@@ -2,20 +2,25 @@ body, html {
     height: 100%
 }
 
-.pageheader {
+p {
+    font-family: 'Open Sans', 'sans serif';
+}
+
+.PageHeader {
     border-bottom: 1px solid black;
     background: #E7FAFE; 
     padding: 2%;
+    color: black;
 }
 
-.headerlogo {
+.HeaderLogo {
     display: block; 
     margin-left: auto;
     margin-right: auto;
     width: 15%;
 }
 
-#topbarnavigation {
+#TopBarNavigation {
     margin: 0; 
     padding: 0; 
     text-align: center;
@@ -23,11 +28,14 @@ body, html {
     color: black;
 }
 
-a {
+.NavFont {
     color: black;
+    text-decoration: none;
 }
 
-
+a:hover {
+    text-decoration: underline;
+}
 
 li {
     display: inline-block; 
@@ -37,19 +45,19 @@ li {
     color: black;
 }
 
-#shoppingcart {
+#ShoppingCart {
     display: inline;
     float: right;
     
 }
 
-#carttext {
+#CartText {
     font-family: 'Open Sans', sans-serif; 
     color: black;
     font-size: 20;
 }
 
-.bannerimage {
+.BannerImage {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("Images/banner_image.png");
     height:100%;
     background-position: center; 
@@ -58,7 +66,7 @@ li {
     position: relative;
 }
 
-.bannertext {
+.BannerText {
     text-align: center; 
     position: absolute; 
     top: 50%; 
@@ -68,17 +76,17 @@ li {
     font-size: 25px;
 }
 
-#bunsouttext {
+#BunsOutText {
     font-size: 85px;
     padding-bottom: 5%;
     font-family: 'Pacifico', cursive;
 }
 
-#favoritesback {
+#FavoritesBack {
     font-family: 'Open Sans', sans-serif;
 }
 
-.browsebutton {
+.BrowseButton {
     margin-top: 7%;
     padding: 5px 12px;
     font-family: 'Open Sans', sans-serif;
@@ -89,18 +97,18 @@ li {
     outline: 4px solid white;
 }
 
-.browsebutton:hover {
+.BrowseButton:hover {
     background-color:white;
     outline: 4px solid #E7FAFE;
 }
 
-#servicecontainer {
+#ServiceContainer {
     display: flex; 
     flex-direction: row; 
     justify-content: space-evenly;
 }
 
-.servicebox {
+.ServiceBox {
     margin-top: 100px;
     padding: 60px;
     background-color: white; 
@@ -110,17 +118,17 @@ li {
     text-align: center;
 }
 
-#servicetitle {
+#ServiceTitle {
     font-family: 'Pacifico', cursive;
     font-size: 45px;
     padding: 10px; 
 }
 
-#servicelogo {
+#ServiceLogo {
     width: 30%;
 }
 
-.generalbutton {
+.GeneralButton {
     margin-top: 20px;
     padding: 5px 12px;
     font-family: 'Open Sans', sans-serif;
@@ -132,14 +140,14 @@ li {
     outline: 3px solid white;
 }
 
-.generalbutton:hover {
+.GeneralButton:hover {
     background-color:white;
     border: 1px solid black; 
     box-shadow: 0px 0px 0px 4px black;
     outline: 3px solid #E7FAFE;
 
 }
-#pagefooter {
+#PageFooter {
     margin-top: 100px;
     border-top: 1px solid black;
     background: #E7FAFE; 
@@ -151,28 +159,30 @@ li {
 
 /*citation for breadcrumbs: https://www.w3schools.com/howto/howto_css_breadcrumbs.asp */
 
-ul.breadcrumbs {
+ul.Breadcrumbs {
     list-style: none;
     padding-top: 40px;
+    font-family: 'Open Sans', sans-serif
 }
 
-ul.breadcrumbs li {
+ul.Breadcrumbs li {
     display: inline;
     color: black;
 }
 
 
-ul.breadcrumbs li a {
+ul.Breadcrumbs li a {
     display: inline; 
     font-size: 18px;
+    text-decoration: none;
     color: black;
 }
 
-ul.breadcrumbs li a:hover {
+ul.Breadcrumbs li a:hover {
     text-decoration: underline;
 }
 
-#onbrowseflavors {
+#OnBrowseFlavors {
     text-decoration: underline;
 }
 
