--- a/homework_5/product-detail.css
+++ b/homework_5/product-detail.css
@@ -1,4 +1,5 @@
 #overlay {
+/*Citation: https://www.w3schools.com/howto/howto_css_overlay.asp */
     position: fixed; 
     width: 100%; 
     height: 100%; 
