--- a/homework_5/product-detail.css
+++ b/homework_5/product-detail.css
@@ -50,7 +50,7 @@
     margin-top: 20px;
     padding: 5px 12px;
     font-family: 'Open Sans', sans-serif;
-    font-style: bold;
+    font-weight: bold;
     color: black;
     background-color: #E7FAFE;
     border: 1px solid black; 
@@ -71,13 +71,12 @@
 }
 
 #DescriptionText{
-    font-size: 16; 
+    font-size: 16px; 
     margin-bottom: 25px;
 }
 
 .NutritionFacts {
     font-size: 14px;
-    padding: none;
 }
 
 #ExitLogo {
@@ -126,7 +125,7 @@ li {
 #carttext {
     font-family: 'Open Sans', sans-serif; 
     color: black;
-    font-size: 20;
+    font-size: 20px;
 }
 
 /*citation for breadcrumbs: https://www.w3schools.com/howto/howto_css_breadcrumbs.asp */
