--- a/homework_5/style.css
+++ b/homework_5/style.css
@@ -54,7 +54,7 @@ li {
 #CartText {
     font-family: 'Open Sans', sans-serif; 
     color: black;
-    font-size: 20;
+    font-size: 20px;
 }
 
 .BannerImage {
@@ -90,7 +90,6 @@ li {
     margin-top: 7%;
     padding: 5px 12px;
     font-family: 'Open Sans', sans-serif;
-    font-style: bold;
     color: black;
     background-color: #E7FAFE;
     border: .25px solid black; 
@@ -132,7 +131,7 @@ li {
     margin-top: 20px;
     padding: 5px 12px;
     font-family: 'Open Sans', sans-serif;
-    font-style: bold;
+    font-weight: bold;
     color: black;
     background-color: #E7FAFE;
     border: 1px solid black; 
