--- a/homework_6/product-detail.css
+++ b/homework_6/product-detail.css
@@ -13,8 +13,8 @@
 }
 
 #ProductDetailBox {
-    margin-top: 200px;
-    margin-left: 500px;
+    margin-top: 150px;
+    margin-left: 25%;
     width: 50%;
     height: 65%;
     background-color: white; 
