--- a/homework_6/style.css
+++ b/homework_6/style.css
@@ -84,16 +84,18 @@ li {
 
 #FavoritesBack {
     font-family: 'Open Sans', sans-serif;
+    margin-top: -10%;
 }
 
 .BrowseButton {
-    margin-top: 7%;
+    margin-top: 5%;
     padding: 5px 12px;
     font-family: 'Open Sans', sans-serif;
     color: black;
     background-color: #E7FAFE;
     border: .25px solid black; 
     outline: 4px solid white;
+    font-size: 18px;
 }
 
 .BrowseButton:hover {
@@ -104,7 +106,8 @@ li {
 #ServiceContainer {
     display: flex; 
     flex-direction: row; 
-    justify-content: space-evenly;
+    justify-content: center;
+    align-content: space-between;
 }
 
 .ServiceBox {
@@ -115,12 +118,17 @@ li {
     box-shadow: 0px 0px 0px 12px#7D8789;
     outline: 10px solid #E7FAFE;
     text-align: center;
+    width: 18%;
+    margin-left: 3%;
+    margin-right: 3%;
 }
 
 .ServiceTitle {
     font-family: 'Pacifico', cursive;
     font-size: 45px;
     padding: 10px; 
+    margin-bottom: -2%;
+    margin-top: -1%;
 }
 
 .ServiceLogo {
@@ -137,6 +145,7 @@ li {
     border: 1px solid black; 
     box-shadow: 0px 0px 0px 4px black;
     outline: 3px solid white;
+    font-size: 18px;
 }
 
 .GeneralButton:hover {
@@ -347,30 +356,30 @@ ul.Breadcrumbs li a:hover {
 /* About Us Page */
 
 #AboutUsContext {
-    width: 50%;
-    height: 50%;
-    margin-right: auto; 
-    margin-left: 95px;
-    margin-bottom: 50%;
-    margin-top: 10px;
+    display: flex;
+    flex-direction: row; 
+    flex-wrap: nowrap;
+    gap: 20px;
+    margin-left: 100px;
 }
 
+#MegRyanPhoto{
+    width: 90%;
+}
 #AboutUsBio {
-    position: absolute; 
-    margin-left: 500px;
     font-family: "Open-sans", sans-serif;
     text-align: left;
+    overflow: hidden; 
+    max-width: 60ch;
 }
 
 #OwnerSignature { 
     font-family: 'Pacifico';
     font-size: 36px;
-    margin-left: 500px;
-    margin-top: -250px;
 }
 
 #PageAboutUsFoot {
-    margin-top: -700px;
+    margin-top: 50px;
     border-top: 1px solid black;
     background: #E7FAFE; 
     padding: 40px 100px; 
