--- a/homework_6/shopping_cart.css
+++ b/homework_6/shopping_cart.css
@@ -1,29 +1,131 @@
-td,th {
-	font-family: monospace;
-	padding: 4px;
-	background-color: #ccc;
+body, html { 
+    height: 100%
 }
 
-label {
-	vertical-align: top;
+p {
+    font-family: 'Open Sans', 'sans serif';
 }
 
-#main {
-	border: 1px dotted blue;
-	padding: 6px;
-	background-color: #ccc;
-	margin-right: 50%;
+.PageHeader {
+    border-bottom: 1px solid black;
+    background: #E7FAFE; 
+    padding: 2%;
+    color: black;
 }
 
-#items_table {
-	border: 1px dotted blue;
-	padding: 6px;
-	margin-top: 12px;
-	margin-right: 50%;
+.HeaderLogo {
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
+    width: 15%;
 }
 
-#items_table h3 {
-	font-size: 18px;
-	margin-top: 0px;
-	font-family: sans-serif;
+#TopBarNavigation {
+    margin: 0; 
+    padding: 0; 
+    text-align: center;
+    font-family: 'Open Sans', 'sans-serif';
+    color: black;
 }
+
+.NavFont {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+li {
+    display: inline-block; 
+    margin-left: 60px;
+    margin-top: 2%;
+    font-size: 20px;
+    color: black;
+}
+
+#ShoppingCart {
+    display: inline;
+    float: right;
+    
+}
+
+#CartText {
+    font-family: 'Open Sans', sans-serif; 
+    color: black;
+    font-size: 20px;
+}
+
+.GeneralButton {
+    margin-top: 20px;
+    padding: 5px 12px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    color: black;
+    background-color: #E7FAFE;
+    border: 1px solid black; 
+    box-shadow: 0px 0px 0px 4px black;
+    outline: 3px solid white;
+    font-size: 18px;
+}
+
+.GeneralButton:hover {
+    background-color:white;
+    border: 1px solid black; 
+    box-shadow: 0px 0px 0px 4px black;
+    outline: 3px solid #E7FAFE;
+
+}
+#PageFooter {
+    margin-top: 100px;
+    border-top: 1px solid black;
+    background: #E7FAFE; 
+    padding: 40px 100px; 
+}
+
+/* Product Browsing Page */
+
+
+/*citation for breadcrumbs: https://www.w3schools.com/howto/howto_css_breadcrumbs.asp */
+
+ul.Breadcrumbs {
+    list-style: none;
+    padding-top: 40px;
+    font-family: 'Open Sans', sans-serif
+}
+
+ul.Breadcrumbs li {
+    display: inline;
+    color: black;
+}
+
+
+ul.Breadcrumbs li a {
+    display: inline; 
+    font-size: 18px;
+    text-decoration: none;
+    color: black;
+}
+
+ul.Breadcrumbs li a:hover {
+    text-decoration: underline;
+}
+
+#OnBrowseFlavors {
+    text-decoration: underline;
+}
+
+.FlavorsHeader {
+    margin-left: 100px;
+    margin-top: 40px;
+    margin-bottom: 50px;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color:black;
+    -webkit-text-stroke-fill-color: white;
+    color: white;
+    font-family: 'Pacifico', cursive;
+    letter-spacing: 4px;
+    font-size: 45px;
+}
+
