--- a/homework_6/shopping_cart.css
+++ b/homework_6/shopping_cart.css
@@ -84,8 +84,6 @@ li {
     padding: 40px 100px; 
 }
 
-/* Product Browsing Page */
-
 
 /*citation for breadcrumbs: https://www.w3schools.com/howto/howto_css_breadcrumbs.asp */
 
@@ -129,3 +127,64 @@ ul.Breadcrumbs li a:hover {
     font-size: 45px;
 }
 
+/* Styling the Cart Items */
+
+.parentCartItemDiv {
+    display: flex; 
+    flex-direction: column; 
+    gap: 35px;
+    align-items: start;
+}
+
+.cartItemBackground { 
+    display: flex; 
+    flex-direction: row; 
+    background-color: #F6F3F3;
+    width: 70%;
+    height: 200px;
+    margin-left: 100px;
+    align-items: center;
+}
+.cartImageSize {
+    width: 25%;
+}
+.cartImage {
+    width: 35%;
+    margin-left: 9%;
+
+}
+
+.itemDetailsSideCart {
+    margin-left: -190px;
+}
+
+.itemCounter {
+    width: 70%; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.quantityButton {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #C4C4C4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-family: ‘Open Sans’;
+    font-weight: 900;
+    color: #202020;
+   }
+
+.moneyRemoveCart {
+   margin-left: 45%;
+}
+
+.removeText {
+    text-decoration: underline;
+    color: #28A9DF;
+}
