--- a/homework_8/assets/style.css
+++ b/homework_8/assets/style.css
@@ -8,7 +8,7 @@ h1 {
 
 h2  {
     font-family: 'Open Sans', sans-serif;
-    font-size: 64pt; 
+    font-size: 50pt; 
     font-weight: 500; 
 }
 
@@ -20,7 +20,7 @@ h3, .formText {
 
 h4 {
     font-family: 'Open Sans', sans-serif;
-    font-size: 36pt; 
+    font-size: 28pt; 
     font-weight: 300; 
 }
 
@@ -54,13 +54,52 @@ p {
     font-weight: normal;
 }
 
+#Link {
+    font-size: 20pt;
+    Color: black; 
+    font-family: 'Open Sans', sans-serif; 
+    font-weight: lighter;
+    margin-right: 45pt;
+}
+
+#link {
+    font-size: 20pt;
+    Color: black; 
+    font-family: 'Open Sans', sans-serif; 
+    font-weight: lighter;
+}
+
 .karaDorLogo{
     width: 25%;
     margin-left: 1%;
     margin-top: 1%;
 }
 
+.footerLogo {
+    max-width: 50px; 
+    margin: 40px;
+}
+
+.footerText {
+    color: gray;
+    font-size: 14px;
+    margin-top: 5%;
+}
 /* Homepage Styles */
+
+.container-fluid {
+    margin-top: 2%;
+}
+
+.colorNavLink {
+    color: #B54600;
+    font-family: "Open Sans", sans-serif;
+}
+#colorNavLinks {
+    color: #B54600;
+    font-family: "Open Sans", sans-serif;
+}
+
 #aboveFoldHomeContent {
     margin-top: 200px;
 }
@@ -113,9 +152,44 @@ p {
 
 /* Contact Me Page */
 
-.overrideBSH2 {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 64pt; 
-    font-weight: 500; 
-    margin-bottom: 40pt;
+
+/*About Me Page */
+.kara_pic {
+    margin: 40px;
 }
+
+.aboutMeTitle {
+    margin-left: 4%;
+}
+
+#aboutMeH1 {
+    font-family: "Open Sans", sans-serif;
+    font-size: 50pt; 
+    font-weight: 500; 
+}
+
+#aboutMeH2 {
+    font-family: "Open Sans", sans-serif;
+    font-size: 35pt; 
+    font-weight: 300; 
+}
+
+/* Case Study 1 page */
+.caseStudyHeading {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 45pt; 
+    font-weight: 400; 
+}
+
+.caseStudyIconText {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20pt; 
+    font-weight: 300; 
+}
+
+.subsequentRow {
+    margin-top: 20pt;
+    margin-bottom: 20pt;
+}
+
+
