Final Clean ups

--- a/homework_8/assets/style.css
+++ b/homework_8/assets/style.css
@@ -209,9 +209,6 @@ p {
     margin-top: -2%;
 }
 
-/* Contact Me Page */
-
-
 /*About Me Page */
 .kara_pic {
     margin: 40px;
@@ -258,7 +255,7 @@ p {
 }
 
 
-/*Case Study 4 - Local Libraries*/
+/*Case Study 4*/
 #orderedListLibraries {
     margin-top: 20pt;
     font-size: 16pt;
